# ai-remodel-estimator

./: .env.example  .gitignore  CLEANUP_PROGRESS.md  CLEANUP_RECOMMENDATIONS.md  DEPLOYMENT.md  Makefile  README.md  __init__.py  app.py  check_packages.py  cloud_app.py  cloud_requirements.txt  compatible_requirements.txt  cursor-projectrules.md  er experience  h origin main  main.py  pyproject.toml  requirements.txt  simple_app_backup.py  simple_requirements.txt  start.bat  start.sh  streamlit_app.py  streamlit_app_cloud_backup.py  streamlit_requirements.txt  timator  triple_fallback.py  ultra_minimal_app.py
backend/: __init__.py  data_generator.py  estimator.py  evaluation.py  langsmith_logger.py  tavily_search.py  vector_store.py
certification/: README.md  task1_2_problem_solution.json  task3_data_strategy.json  task5_evaluation_summary.json  task6_7_model_comparison.json
docs/: langsmith_integration.md
documentation/: App-flow.md  Backend.md  Implementation-plan.md  PRD.md  Security-guidelines.md  Tech-stack.md  Userflow.md
scripts/: check_streamlit.py  generate_certification_evidence.py  generate_data.py  generate_fine_tuning.py  improved_test_estimator.py  langsmith_example.py  run_autotrain.sh  run_evaluation.py  run_tests.py  setup.ps1  setup.sh  simple_test_evaluation.py  template_script.py  test_app.py  test_environment.py  test_estimator.py  test_estimator_simple.py  test_helpers.py  test_langsmith.py  test_openai.py  test_pinecone.py
ui/: __init__.py  market_research_component.py  pages.py
utils/: __init__.py  data_loader.py  env_loader.py  (+2 more)
(+7 files in other folders)
